[package]
name = "shoporusni"
version = "0.1.0"
edition = "2021"

[lib]
name = "shoporusni"
path = "src/main.rs"
crate-type = ["bin"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.16", features = ["full"] }
prettytable = "0.10.0"
url = "2.2.2"
colored = "2.0.0"
clap = "3.0.0-beta.4"



