[package]
name = "shoporusni"
version = "0.1.1"
authors = ["Dmytro Barabash <dbarabashdev@gmail.com>"]
edition = "2021"
description = "A CLI tool for displaying the latest statistics of the Russian military losses"
documentation = "https://github.com/tutizaraz/russian-army-losses"
homepage = "https://github.com/tutizaraz/russian-army-losses"
repository = "https://github.com/tutizaraz/russian-army-losses"
license = "MIT"

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.16", features = ["full"] }
prettytable = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.2.2"
colored = "2.0.0"
clap = "3.0.0-beta.4"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "2.0"
serde_json = "1.0"

[package.metadata.clap]
version = "0.1.0"
authors = ["Dmytro Barabash <dbarabashdev@gmail.com>"]
about = "A CLI tool for displaying the latest statistics of the Russian military losses"
name = "shoporusni"
